k3s_cluster/base/dmz/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-radarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-radarr
  ports:
    - name: web
      protocol: TCP
      port: 6654
      targetPort: 7878
